--- a/.gitignore
+++ b/.gitignore
@@ -165,7 +165,11 @@ cython_debug/
 .vscode/
 
 # dataset
-dataset/
-
+dataset/*
+*.pth
+!dataset/
 # ignore all .zip files
 *.zip
+
+results/*
+!results/
