--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,6 @@
-streamlit==1.25.0
-pandas==2.1.1
-numpy==1.25.2
-torch==2.0.1
-torchvision==0.15.2
-scikit-learn==1.3.0
-matplotlib==3.8.0
-altair==5.5.0
-beautifulsoup4==4.12.3
-bleach==4.1.0
-click==8.1.7
-cffi==1.17.0
-cachetools==5.5.0
-anyio==4.4.0
-async-lru==2.0.4
-attrs==24.2.0
-arrow==1.3.0
-asttokens==2.4.1
-absl-py==2.1.0
-d2l==1.0.3
+pytorch==2.4.0
+streamlit==1.41.1
+scikit-learn==1.5.1
+numpy==1.23.5
+pandas==2.0.3
+matplotlib==3.7.2
